[tool.poetry]
name = "penguin_judge"
version = "1.3.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.5"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
uvloop = "^0.15.2"
httptools = "^0.1.1"
zstandard = "^0.15.2"
docker = "^4.4.4"
PyYAML = "^5.4.1"
msgpack = "^1.0.2"
aiormq = "^4.2.1"

[tool.poetry.dev-dependencies]
SQLAlchemy = {extras = ["mypy"], version = "^1.4.5"}
flake8 = "^3.9.0"
WebTest = "^2.0.35"
flake8-isort = "^4.0.0"

[tool.poetry.scripts]
penguin_judge = "penguin_judge.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
